@startuml Pelota


class Usuario
class Cronometro{
    +reiniciar()
    +pausar()
    +reanudar()
    +actualizar()
    +ajustarPosicion(vista)
    +dibujar(ventana)
    +obtenerTiempoFinal()
}
class Pelota{
    +saltar(salto)
    +moverDe(fuerza)
    +moverIzq(fuerza)
    +obtenerFiguraPe()
    +obtenerCuerpo()
    +obtenerPosicion()
    +detectarContacto()
}
class Juego{
-Pelota pelotaRoja    
}
class Escenario
class Plataforma
class PlataformaNormal{
    +obtenerFigura()

}
class PlataformaLetal{
    +obtenerFigura()

}
class Fondo{
    +actualizar(vista,ventana)
    +dibujar(ventana)
}
class Musica{
    +reproducir(volumen,enBucle)
    +detener()
}
class SonidoSalto{
    +reproducir()
}
class Colision{
    +beginContact(contact)
    +endContact(contact)
}


Juego o-- "1"Escenario
Escenario *-- "1"Pelota
Usuario --> "1"Pelota
PlataformaNormal -->Plataforma
PlataformaLetal -->Plataforma
Escenario o-- "1"Cronometro
Escenario o-- "17"Plataforma
Escenario o-- "1"Musica
Pelota o-- SonidoSalto
Pelota o-- Colision
Escenario o-- "1"Fondo
@enduml